# Sidecrawler-Opengl-Game

./: .gitignore  CMakeLists.txt
assets/: Earth_2K.mtl  Laser.dae  LaserShort.dae  LaserTry.mtl  Shine_Sprite.mtl  Star 2.mtl  Star_1.mtl  Venus_1K.mtl  blockPlayer.mtl  enemy.mtl  f.dae  fsparticle.glsl  fsphong.glsl  item1.mtl  item2.mtl  item3.mtl  skybox.mtl  untitled.mtl  vsparticle.glsl
include/: Application.h  Enemy.h  ParticleSystem.h  Spaceship.h
libraries/assimp/include/assimp/: cimport.h  types.h
libraries/freetype/include/freetype/: freetype.h  ftcolor.h  fttypes.h
libraries/freetype/include/freetype/config/: ftconfig.h
libraries/freetype/include/freetype/internal/: autohint.h  cffotypes.h  cfftypes.h  compiler-macros.h  ftcalc.h  ftdebug.h  ftdrv.h  ftgloadr.h  fthash.h  ftmemory.h  ftobjs.h  ftpsprop.h  ftrfork.h  ftstream.h  psaux.h  pshints.h  sfnt.h  svginterface.h  t1types.h  tttypes.h  wofftypes.h
libraries/freetype/include/freetype/internal/services/: svbdf.h  svcfftl.h  svcid.h  svfntfmt.h  svgldict.h  svgxval.h  svkern.h  svmetric.h  svmm.h  svotval.h  svpfr.h  svpostnm.h  svpscmap.h  svpsinfo.h  svsfnt.h  svttcmap.h  svtteng.h  svttglyf.h  svwinfnt.h
libraries/glfw/include/GLFW/: glfw3.h
source/: Application.cpp  Camera.cpp  Enemy.cpp  FreeType.cpp  FreeType.h  Items.cpp  Items.h  ParticleProps.cpp  ParticleProps.h  ParticleSystem.cpp  Spaceship.cpp  Text.h  main.cpp
source/utils/: ParticleShader.h  Utils.cpp  Utils.h
source/utils/Models/: Aabb.cpp  Aabb.h  BaseModel.cpp  BaseModel.h  LineBoxModel.cpp  LineBoxModel.h  TriangleBoxModel.cpp
source/utils/Shader/: ParticleShader.cpp  ParticleShader.h
source/utils/YourClasses/: ColorA.cpp  ColorA.h
